tests/baselines/reference/interfaceMemberValidation.errors.txt
tests/cases/compiler/interfaceMemberValidation.ts(2,11): error TS2430: Interface 'i2' incorrectly extends interface 'i1'.
  Types of property 'name' are incompatible.
    Type '数字' is not assignable to type '文字'.
tests/cases/compiler/interfaceMemberValidation.ts(5,2): error TS2411: Property 'bar' of type '{ (): 任意; (): 任意; }' is not assignable to string index type '数字'.
tests/cases/compiler/interfaceMemberValidation.ts(10,2): error TS2374: Duplicate string index signature.


==== tests/cases/compiler/interfaceMemberValidation.ts (3 errors) ====
    interface i1 { name: string; }
    interface i2 extends i1 { name: number; yo: string; }
              ~~
!!! error TS2430: Interface 'i2' incorrectly extends interface 'i1'.
!!! error TS2430:   Types of property 'name' are incompatible.
!!! error TS2430:     Type '数字' is not assignable to type '文字'.
    
    interface foo {
     bar():any;
     ~~~~~~~~~~
!!! error TS2411: Property 'bar' of type '{ (): 任意; (): 任意; }' is not assignable to string index type '数字'.
     bar():any;
     new():void;
     new():void;
     [s:string]:number;
     [s:string]:number;
     ~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate string index signature.
    }